Fix chat not always being the same size on mobile.

--- a/src/routes/game/components/elements/chatBox/ChatBox.module.css
+++ b/src/routes/game/components/elements/chatBox/ChatBox.module.css
@@ -104,3 +104,7 @@
   left: 0.1em;
   right: 0;
 }
+
+.chatMobileBox * {
+  font-size: max(1em, 7px) !important;
+}
